[package]
name = "weaver"
version = "0.1.0"
authors = ["Laurent Querel <l.querel@f5.com>"]
edition = "2021"
repository = "https://github.com/f5/otel-weaver"
description = "OTel Weaver - A Schema-Driven Client SDK Generator for OpenTelemetry"
keywords = ["opentelemetry", "client", "schema", "arrow", "generator"]
categories = ["command-line-utilities"]
license = "Apache-2.0"
readme = "README.md"
publish = false

# Workspace definition ========================================================
[workspace]
members = [
    "crates/*",
]

[workspace.package]
authors = ["Laurent Querel <l.querel@f5.com>"]
edition = "2021"
repository = "https://github.com/f5/otel-weaver"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.47"
ureq = "2.7.1"
regex = "1.9.6"
rayon = "1.8.0"

# Crate definitions ===========================================================
[[bin]]
bench = false
path = "src/main.rs"
name = "weaver"

[dependencies]
# local crates dependencies
weaver_logger = { path = "crates/weaver_logger" }
weaver_resolver = { path = "crates/weaver_resolver" }
weaver_template = { path = "crates/weaver_template" }
weaver_schema = { path = "crates/weaver_schema" }

clap = { version = "4.4.2", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.23.0"
tui-textarea = { version = "0.2.2", features = ["ratatui-crossterm"], default-features = false }
tantivy = "0.21.0"

# workspace dependencies
serde.workspace = true
serde_yaml.workspace = true

[package.metadata.cargo-machete]
# force cargo machete to ignore the following crates
ignored = ["serde"]