[package]
name = "resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
logger = { version = "0.1.0", path = "../logger" }
semconv = { version = "0.1.0", path = "../semconv" }
schema = { version = "0.1.0", path = "../schema" }
version = { version = "0.1.0", path = "../version" }

thiserror.workspace = true

