[package]
name = "resolver"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
logger = {  path = "../logger" }
semconv = { path = "../semconv" }
schema = { path = "../schema" }
version = { path = "../version" }

regex.workspace = true
thiserror.workspace = true

url = "2.4.1"
rayon = "1.8.0"

