[package]
name = "schema"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
semconv = { path = "../semconv" }
version = { path = "../version" }

serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
ureq.workspace = true

url = {version="2.4.1", features = ["serde"]}