[package]
name = "template"
version = "0.1.0"
edition = "2021"

[dependencies]
logger = { path = "../logger" }
resolver = { path = "../resolver" }
schema = { path = "../schema" }

tera = "1.19.1"
textwrap = "0.16.0"
glob = "0.3.1"
convert_case = "0.6.0"

thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
