[package]
name = "weaver_cache"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
tempdir = "0.3.7"
dirs = "5.0"
gix = { version = "0.55.2", default-features = false, features = [
    "comfort",
    "blocking-http-transport-reqwest",
    "max-performance-safe",
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
] }

thiserror.workspace = true

