[package]
name = "weaver_resolved_schema"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
weaver_version = { path = "../weaver_version" }

serde.workspace = true

ordered-float = { version = "4.2.0", features = ["serde"] }