[package]
name = "weaver_resolved_schema"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
weaver_version = { path = "../weaver_version" }
weaver_semconv = { path = "../weaver_semconv" }

serde.workspace = true
ordered-float.workspace = true

prost = "0.12.3"

[dev-dependencies]
serde_json = "1.0.64"

[build-dependencies]
prost-build = { version = "0.12", features = ["cleanup-markdown"] }

[package.metadata.cargo-machete]
ignored = ["prost"]